# decaf

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt
src/per_field/: f_generic.tmpl.c
src/public_include/decaf/: common.h
test/: CMakeLists.txt
